[106]|[Sahiti | Maitri] Change api for modules and refactor tc